# acled_conflict_analysis

./: README.md  pyproject.toml  setup.py
docs/: _toc.yml  conflict.md
notebooks/: extraction.ipynb  visualizing-acled.ipynb
src/acled_conflict_analysis/: __init__.py  acled_auth.py  analysis.py  extraction.py  processing.py  text_analysis.py  visuals.py
src/acled_conflict_analysis/data/: Country_ISO_Code_Map.csv
