[build-system]
requires = ["hatchling>=1.21.0", "hatch-vcs>=0.3.0"]
build-backend = "hatchling.build"

[project]
name = "acled_conflict_analysis"
description = "A Python package designed to extract, analyze and visualize ACLED conflict data."
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
keywords = ["ACLED", "conflict"]
authors = [{ name = "Development Data Group", email = "datalab@worldbank.org" }]
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
	"Operating System :: OS Independent",
	"Intended Audience :: Developers",
	"Topic :: Scientific/Engineering",
]
dynamic = ["version"]

requires-python = ">=3.8"
dependencies = [
	"geopandas",
	"pandas",
	"bokeh"
]
[project.optional-dependencies]
docs = [
	"docutils==0.21.2",    # https://jupyterbook.org/en/stable/content/citations.html?highlight=docutils#citations-and-bibliographies
	"jupyter-book>=1,<2",
	"sphinxcontrib-apidoc>=0.4.0,<1",
]

[project.urls]
"Homepage" = "https://github.com/datapartnership/acled_conflict_analysis"
"Bug Reports" = "https://github.com/datapartnership/acled_conflict_analysis/issues"
"Source" = "https://github.com/datapartnership/acled_conflict_analysis"

[tool.codespell]
skip = 'docs/_build,docs/bibliography.bib,*.png,*.gz,*.whl'
ignore-regex = '^\s*"image\/png":\s.*'
ignore-words-list = "dec,"

[tool.hatch.build.targets.wheel]
packages = ["src/acled_conflict_analysis"]

[tool.hatch.version]
source = "vcs"

[tool.ruff.lint.pydocstyle]
convention = "numpy"
